fixed background clipping to first view height

--- a/src/scss/pages/home/Hero.scss
+++ b/src/scss/pages/home/Hero.scss
@@ -1,8 +1,10 @@
 #page--home {
   .hero {
     margin-top: 10em;
+    margin-bottom: 30em;
     @include mq($mq-medium) {
       margin-top: 5em;
+      margin-bottom: 20vw;
     }
     @include no-select();
     align-items: center;
@@ -18,7 +20,7 @@
 
       &.mobile {
         width: 100%;
-        height: 100vh;
+        height: auto;
         min-height: 800px;
         object-fit: cover;
       }
